# bezier

./: CMakeLists.txt  README.md
include/: bez.h  bez_segment.h  curve.h  event.h  point.h  segment.h  vector2.h  visuals.h  window.h
src/: bez.cpp  bez_point.cpp  bez_segment.cpp  curve.cpp  main.cpp  point.cpp  segment.cpp  vector2.cpp  visuals.cpp  window.cpp
